--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.4.0",
     "buffer": "^6.0.3",
     "crypto": "^1.0.1",
+    "dotenv": "^16.3.1",
     "jsonwebtoken": "^9.0.0",
     "jwt-decode": "^3.1.2",
     "nodemailer": "^6.9.3",
